; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_log_sense.c_sati_information_exception_log_page_contruct.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_log_sense.c_sati_information_exception_log_page_contruct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCSI_LOG_PAGE_INFORMATION_EXCEPTION = common dso_local global i32 0, align 4
@ATA_MID_REGISTER_THRESHOLD_EXCEEDED = common dso_local global i64 0, align 8
@ATA_HIGH_REGISTER_THRESHOLD_EXCEEDED = common dso_local global i64 0, align 8
@SCSI_ASC_HARDWARE_IMPENDING_FAILURE = common dso_local global i32 0, align 4
@SCSI_ASCQ_GENERAL_HARD_DRIVE_FAILURE = common dso_local global i32 0, align 4
@SCSI_ASC_NO_ADDITIONAL_SENSE = common dso_local global i32 0, align 4
@SCSI_ASCQ_NO_ADDITIONAL_SENSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @sati_information_exception_log_page_contruct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sati_information_exception_log_page_contruct(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32* @sati_cb_get_d2h_register_fis_address(i8* %10)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i64 @sati_get_ata_lba_mid(i32* %12)
  store i64 %13, i64* %8, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i64 @sati_get_ata_lba_high(i32* %14)
  store i64 %15, i64* %9, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* @SCSI_LOG_PAGE_INFORMATION_EXCEPTION, align 4
  %19 = call i32 @sati_set_data_byte(i32* %16, i8* %17, i32 0, i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @sati_set_data_byte(i32* %20, i8* %21, i32 1, i32 0)
  %23 = load i32*, i32** %4, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @sati_set_data_byte(i32* %23, i8* %24, i32 2, i32 0)
  %26 = load i32*, i32** %4, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @sati_set_data_byte(i32* %26, i8* %27, i32 3, i32 8)
  %29 = load i32*, i32** %4, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @sati_set_data_byte(i32* %29, i8* %30, i32 4, i32 0)
  %32 = load i32*, i32** %4, align 8
  %33 = load i8*, i8** %5, align 8
  %34 = call i32 @sati_set_data_byte(i32* %32, i8* %33, i32 5, i32 0)
  %35 = load i32*, i32** %4, align 8
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @sati_set_data_byte(i32* %35, i8* %36, i32 6, i32 3)
  %38 = load i32*, i32** %4, align 8
  %39 = load i8*, i8** %5, align 8
  %40 = call i32 @sati_set_data_byte(i32* %38, i8* %39, i32 7, i32 4)
  %41 = load i64, i64* %8, align 8
  %42 = load i64, i64* @ATA_MID_REGISTER_THRESHOLD_EXCEEDED, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %57

44:                                               ; preds = %3
  %45 = load i64, i64* %9, align 8
  %46 = load i64, i64* @ATA_HIGH_REGISTER_THRESHOLD_EXCEEDED, align 8
  %47 = icmp eq i64 %45, %46
  br i1 %47, label %48, label %57

48:                                               ; preds = %44
  %49 = load i32*, i32** %4, align 8
  %50 = load i8*, i8** %5, align 8
  %51 = load i32, i32* @SCSI_ASC_HARDWARE_IMPENDING_FAILURE, align 4
  %52 = call i32 @sati_set_data_byte(i32* %49, i8* %50, i32 8, i32 %51)
  %53 = load i32*, i32** %4, align 8
  %54 = load i8*, i8** %5, align 8
  %55 = load i32, i32* @SCSI_ASCQ_GENERAL_HARD_DRIVE_FAILURE, align 4
  %56 = call i32 @sati_set_data_byte(i32* %53, i8* %54, i32 9, i32 %55)
  br label %66

57:                                               ; preds = %44, %3
  %58 = load i32*, i32** %4, align 8
  %59 = load i8*, i8** %5, align 8
  %60 = load i32, i32* @SCSI_ASC_NO_ADDITIONAL_SENSE, align 4
  %61 = call i32 @sati_set_data_byte(i32* %58, i8* %59, i32 8, i32 %60)
  %62 = load i32*, i32** %4, align 8
  %63 = load i8*, i8** %5, align 8
  %64 = load i32, i32* @SCSI_ASCQ_NO_ADDITIONAL_SENSE, align 4
  %65 = call i32 @sati_set_data_byte(i32* %62, i8* %63, i32 9, i32 %64)
  br label %66

66:                                               ; preds = %57, %48
  %67 = load i32*, i32** %4, align 8
  %68 = load i8*, i8** %5, align 8
  %69 = call i32 @sati_set_data_byte(i32* %67, i8* %68, i32 10, i32 255)
  ret void
}

declare dso_local i32* @sati_cb_get_d2h_register_fis_address(i8*) #1

declare dso_local i64 @sati_get_ata_lba_mid(i32*) #1

declare dso_local i64 @sati_get_ata_lba_high(i32*) #1

declare dso_local i32 @sati_set_data_byte(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
